disable follow button for logged out and fix icon alignment in FF

--- a/client/components/bloganuary-header/style.scss
+++ b/client/components/bloganuary-header/style.scss
@@ -16,6 +16,7 @@
 	.blogging-bloganuary-icon {
 		vertical-align: middle;
 		padding-right: 10px;
+		display: inline-block;
 
 		> svg {
 			width: 44px;
